[gd_scene load_steps=3 format=1]

[ext_resource path="res://addons/ch.fischspiele.tilesethelper/scenes/propertyItem.gd" type="Script" id=1]
[ext_resource path="res://addons/ch.fischspiele.tilesethelper/images/gui_image_single.png" type="Texture" id=2]

[node name="propertyItem" type="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 264.0
margin/bottom = 42.0
alignment = 0
script/script = ExtResource( 1 )

[node name="typeContainer" type="VBoxContainer" parent="."]

rect/min_size = Vector2( 85, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 85.0
margin/bottom = 42.0
alignment = 0

[node name="lable" type="Label" parent="typeContainer"]

rect/min_size = Vector2( 45, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 85.0
margin/bottom = 14.0
text = "Type:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dataType" type="OptionButton" parent="typeContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 18.0
margin/right = 85.0
margin/bottom = 38.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "bool"
flat = false
align = 0
selected = 0
items = [ "bool", null, false, 0, null, "float", null, false, 1, null, "texture", null, false, 2, null ]

[node name="nameContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 89.0
margin/top = 0.0
margin/right = 189.0
margin/bottom = 42.0
alignment = 0

[node name="lable" type="Label" parent="nameContainer"]

rect/min_size = Vector2( 45, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 14.0
text = "Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="propertyName" type="LineEdit" parent="nameContainer"]

rect/min_size = Vector2( 100, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 18.0
margin/right = 100.0
margin/bottom = 42.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="valueContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 193.0
margin/top = 0.0
margin/right = 267.0
margin/bottom = 42.0
alignment = 0

[node name="lable" type="Label" parent="valueContainer"]

rect/min_size = Vector2( 45, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 74.0
margin/bottom = 14.0
text = "Value:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="propertyValue" type="CenterContainer" parent="valueContainer"]

rect/min_size = Vector2( 74, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 74.0
margin/bottom = 42.0
use_top_left = false

[node name="0" type="CheckBox" parent="valueContainer/propertyValue"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="1" type="SpinBox" parent="valueContainer/propertyValue"]

visibility/visible = false
rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 66.0
margin/bottom = 24.0
range/min = 0.0
range/max = 100.0
range/step = 0.1
range/page = 0.1
range/value = 1.0
range/exp_edit = true
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="2" type="CenterContainer" parent="valueContainer/propertyValue"]

editor/display_folded = true
visibility/visible = false
rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = -20.0
margin/right = 69.0
margin/bottom = 44.0
use_top_left = false

[node name="btnImage" type="TextureButton" parent="valueContainer/propertyValue/2"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureFrame" type="TextureFrame" parent="valueContainer/propertyValue/2"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 4


